# finance10

./: .dockerignore  .env  .env.local  .gitignore  .replit  AMOUNT_EXTRACTION_SUCCESS_REPORT.md  AWS_DEPLOYMENT_GUIDE.md  BUILD_REQUIREMENTS.md  CHAT_SYSTEM_DOCUMENTATION.md  COMPREHENSIVE_PLATFORM_REPORT.md  COMPREHENSIVE_TEST_PLAN.md  COMPREHENSIVE_TEST_RESULTS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SOLUTION.md  Dockerfile  E2E_Test_Report.md  FINAL_CALCULATION_FIX_REPORT.md  FINAL_COMPREHENSIVE_TEST_REPORT.md  FINAL_PLATFORM_VALIDATION_REPORT.md  FUNCTIONAL_DESIGN_DOCUMENT.md  MULTITENANT_ARCHITECTURE_GUIDE.md  PLATFORM_STATUS_SUMMARY.md  README.md  REFACTORING_SUCCESS_REPORT.md  SERVER_COMPLETION_REPORT.md  TECHNICAL_ARCHITECTURE_DOCUMENT.md  TECHNICAL_DESIGN_DOCUMENT.md  TEST_CASES.md  TEST_EXECUTION_SUMMARY.md  TEST_SCENARIOS_GUIDE.md  TRANSITION_STATUS.md  USER_MANUAL.md  USER_WORKFLOWS.md  actual_scaling_calculation.py  alembic.ini  analyze_additional_files.py  analyze_document_amounts.py  analyze_document_data.py  analyze_journal_discrepancy.py  analyze_trial_balance.py  (+86 more)
alembic/: env.py
app/: __init__.py  auth.py  config.py  database.py  models.py  schemas.py
attached_assets/: Journal Apr-Jun Chennai_1752936472433.xlsx  Pasted-1-File-Ingestion-Upload-FR1-1-User-should-be-able-to-upload-Excel-CSV-or-PDF-documents-via-API-1752394515132_1752394515138.txt  Pasted-User-Journey-for-a-New-Client-on-QRT-Closure-Platform-Step-1-Onboarding-Account-Setup-Action-D-1752406997159_1752406997161.txt
docs/: INVOICE_ITEMIZATION_DEMO.md  INVOICE_ITEMIZATION_GUIDE.md
(+139 files in other folders)
